--- a/css/main.css
+++ b/css/main.css
@@ -1,39 +1,145 @@
-* { margin: 0px; box-sizing: border-box; }
-body{
-    position: relative;
-    z-index: 1;
-    font-family: sans-serif;
-}
-canvas {
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-}
-main {
+/* make the canvases, children of the this container */
+#container {
     position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 3;
-    width: 100%;
+    /* pointer-events: none; */
+    z-index: 10;      /* position this canvas on top of the other one */
+    z-index: 8;    /* position this canvas at bottom of the other one */
 
-    font-size: 32px;
-    color: #fff;
     
-    padding: 5vw;
+}
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+}
+
+body {
+    font-family: Arial, Verdana, sans-serif;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.header {
+    box-shadow: 0px 4px 21px -1px rgba(82, 180, 255, 0.13);
+}
+
+.header__container {
     display: flex;
-    flex-direction: column;
-}
-main section {
-    width: 50%;
-    padding: 100px 0px;
-    height: 100vh;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-main section p {
-    padding: 5%;
-    background: rgba(0,0,0,0.6);
+.header__burger-btn {
+    display: none;
+    position: relative;
+    /* position: absolute; */
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+    z-index: 2;
 }
-main section:nth-child(2) { margin-left: 50%; }
-main section:nth-child(4) { margin-left: 50%; }
+
+.header__burger-btn span {
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: black;
+    left: 5px;
+    transition: transform .5s, opacity .5s, background-color .5s;
+}
+
+.header__burger-btn span:nth-child(1) {
+    transform: translateY(-10px);
+}
+
+.header__burger-btn span:nth-child(3) {
+    transform: translateY(10px);
+}
+
+.header.open .header__burger-btn span {
+    background-color: white;
+}
+
+.header.open .header__burger-btn span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+}
+
+.header.open .header__burger-btn span:nth-child(2) {
+    opacity: 0;
+}
+
+.header.open .header__burger-btn span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
+}
+
+.logo {
+    display: block;
+}
+
+.logo__img {
+    width: 200px;
+}
+
+.menu__list {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu__item:not(:last-child) {
+    margin-right: 20px;
+}
+
+.menu__link {
+    font-size: 16px;
+}
+
+/* @media (max-width: 992px) { */
+    .header__burger-btn {
+        display: block;
+    }
+    .menu {
+        position: absolute;
+        left: -350px;
+        top: 0;
+        width: 350px;
+        background-color: rgb(71, 145, 255);
+        padding: 75px 20px 20px 20px;
+        transition: transform .5s;
+    }
+    .menu__list {
+        display: block;
+    }
+    .menu__link {
+        color: white;
+        font-size: 21px;
+        display: block;
+        padding: 10px 0;
+    }
+    .header.open .menu {
+        transform: translateX(100%);
+    }
+/* } */
